--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <link href="estilos.css" rel="stylesheet">
     <title> Age Test</title>
+    <link rel="icon" href="puntitorosa.png" type="image/x-icon">
 </head>
 <body>
     <div id="cover">
